tests/fixtures/invalid/min_set_none.py
# Cannot call min() with Set[int], None
x = min({1, 2, 3}, None)
